Stop block exporter options from jumping around.

--- a/demos/blockfactory/factory.css
+++ b/demos/blockfactory/factory.css
@@ -102,6 +102,10 @@ pre,
   padding: 5px;
 }
 
+.disabled {
+  color: #888;
+}
+
 button:disabled, .buttonStyle:disabled {
   opacity: 0.6;
 }
